revised mchat summary

--- a/pchat/index.html
+++ b/pchat/index.html
@@ -125,9 +125,11 @@
 </nav>
 <ul>
 	<li><b>Marathon Chat</b></li>
-	<li><b>3</b> days, <b>3</b> years</li>
-	<li><b>633</b> pages</li>
-	<li><b>63,098</b> lines</li>
+	<li><b>3</b> years, <b>3</b> days<ul>
+		<li>2006: <b>225</b> pages</li>
+		<li>2007: <b>189</b> pages</li>
+		<li>2008: <b>219</b> pages</li>
+	</ul></li>
 </ul>
 </div>
 <nav class="clear">
