--- a/pchat/index.html
+++ b/pchat/index.html
@@ -74,7 +74,7 @@
 	</table>
 </nav>
 <ul>
-	<li><b>PChat v1</b></li>
+	<li><b>PChat</b> v1</li>
 	<li><b>1215</b> days</li>
 	<li><b>10,497</b> pages</li>
 	<li><b>977,986</b> lines</li>
@@ -125,11 +125,10 @@
 </nav>
 <ul>
 	<li><b>Marathon Chat</b></li>
-	<li><b>3</b> years, <b>3</b> days<ul>
-		<li>2006: <b>225</b> pages</li>
-		<li>2007: <b>189</b> pages</li>
-		<li>2008: <b>219</b> pages</li>
-	</ul></li>
+	<li>2006: <b>225</b> pages</li>
+	<li>2007: <b>189</b> pages</li>
+	<li>2008: <b>219</b> pages</li>
+	</ul>
 </ul>
 </div>
 <nav class="clear">
