--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 	padding: 1.67em;
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 400px) {
 	body { font-size: 18px; }
 }
 
@@ -40,8 +40,9 @@ a:hover, a:focus {
 <body>
 
 <ul>
-<li><a href="//www.facebook.com/alex.hong">facebook.com/alex.hong</a></li>
-<li><a href="//www.flickr.com/photos/aqhong">flickr.com/aqhong</a></li>
+<li><a href="https://www.facebook.com/alex.hong"><b>facebook</b>.com/alex.hong</a></li>
+<li><a href="https://www.flickr.com/photos/aqhong"><b>flickr</b>.com/aqhong</a></li>
+<li><a href="https://www.instagram.com/modest.maoist/"><b>instagram</b>.com/modest.maoist</a></li>
 </ul>
 
 </body>
