--- a/games/index.html
+++ b/games/index.html
@@ -8,39 +8,26 @@
 <script src="../smartquotes.js"></script>
 <script>smartquotes()</script>
 <style>
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-body { 
-	margin: 0;
-	padding: 20px 10px 0; 
-	font: 13px/20px -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif; 
-}
-div { padding-bottom: 20px; }
-@media only screen and (min-width: 560px) { 
-	div { float: left; width: 50%; }
-}
-pre { font-family: inherit; }
-li {
-	list-style: none;
-}
-header, ol, ul { 
-	margin: 0;
-	padding: 0 10px;
-}
+* { margin: 0; padding: 0; list-style: none; font-family: inherit; }
+body { padding: 20px 10px 0; font: 13px/20px -apple-system, BlinkMacSystemFont, Roboto, sans-serif; }
+div { padding: 0 10px 20px; box-sizing: border-box; }
+@media only screen and (min-width: 560px) { div { float: left; width: 50%;  } }
+li li { padding-left: 10px; }
 u { 
-	display: inline-block;
-	line-height: 11px;
-	width: 7px;
-	text-align: center;
 	text-decoration: none;
 	font-size: 10px;
+	display: inline-block;
+	line-height: 11px;
 	vertical-align: 1px;
+	text-align: center;
+	white-space: nowrap;
+	width: 7px;
 	padding: 0 2px;
+	margin-right: 2px;
 	border: 1px solid;
 	border-radius: 2px;
 	box-shadow: 0 1px 0 rgba(0,0,0,0.25);
-	white-space: nowrap;
 }
-u+u { margin-left: 2px; }
 </style>
 </head>
 
@@ -58,11 +45,11 @@ u+u { margin-left: 2px; }
 [4][V] Bit.Trip Presents Runner 2: Future Legend of Rhythm Alien $2
 [4] Bloodborne $8
 Borderlands Bundle $21
-	[3] Borderlands
-	[3] Borderlands 2
+ [3] Borderlands
+ [3] Borderlands 2
 Borderlands: The Handsome Collection $18
-	[4] Borderlands 2
-	[4] Borderlands: The Pre-Sequel
+ [4] Borderlands 2
+ [4] Borderlands: The Pre-Sequel
 [3] Braid $1
 [3] Catherine $7
 [4][3][V] Cel Damage HD $3
@@ -100,13 +87,13 @@ Borderlands: The Handsome Collection $18
 [4] The Last of Us Remastered $11
 [4] Life Is Strange $10
 Mass Effect Trilogy $15
-	[3] Mass Effect
-	[3] Mass Effect 2
-	[3] Mass Effect 3 
+ [3] Mass Effect
+ [3] Mass Effect 2
+ [3] Mass Effect 3 
 [3] Max Payne 3 $8
 Metal Gear Solid HD Collection $9
-	[V] Metal Gear Solid 2: Sons of Liberty
-	[V] Metal Gear Solid 3: Snake Eater
+ [V] Metal Gear Solid 2: Sons of Liberty
+ [V] Metal Gear Solid 3: Snake Eater
 [3] Mirror's Edge $2
 [4] Mirror's Edge Catalyst $12
 [V] Need for Speed: Most Wanted $5
@@ -127,9 +114,9 @@ Metal Gear Solid HD Collection $9
 [V] Persona 4 Golden $9
 [4] Plants vs. Zombies: Garden Warfare
 Prince of Persia Trilogy $8
-	[3] Prince of Persia: The Sands of Time
-	[3] Prince of Persia: Warrior Within
-	[3] Prince of Persia: The Two Thrones
+ [3] Prince of Persia: The Sands of Time
+ [3] Prince of Persia: Warrior Within
+ [3] Prince of Persia: The Two Thrones
 [3] Prince of Persia: The Forgotten Sands $4
 [3] Red Dead Redemption $14
 [4][3][V] Resogun
@@ -153,9 +140,9 @@ Prince of Persia Trilogy $8
 [V] Three Fourths Home $2
 [3] Tokyo Jungle $1
 Uncharted: The Nathan Drake Collection $8
-	[4] Uncharted: Drake's Fortune
-	[4] Uncharted 2: Among Thieves
-	[4] Uncharted 3: Drake's Deception
+ [4] Uncharted: Drake's Fortune
+ [4] Uncharted 2: Among Thieves
+ [4] Uncharted 3: Drake's Deception
 [4][3][V] The Unfinished Swan $4
 [4] Virginia $5
 [4][V] Volume $5
@@ -278,9 +265,9 @@ Uncharted: The Nathan Drake Collection $8
 [4][3][V] Helldivers
 [V] History Legends of War: Patton
 Hitman HD Trilogy
-	[3] Hitman 2: Silent Assassin
-	[3] Hitman: Contracts
-	[3] Hitman: Blood Money
+ [3] Hitman 2: Silent Assassin
+ [3] Hitman: Contracts
+ [3] Hitman: Blood Money
 [3] Hitman: Absolution
 [3] Hoard
 [4][3][V] Hohokum
@@ -333,8 +320,8 @@ Hitman HD Trilogy
 [3] Malicious
 [3] Medal of Honor: Warfighter
 Mega Man 9 & 10 Combo Pack
-	[3] Mega Man 9
-	[3] Mega Man 10
+ [3] Mega Man 9
+ [3] Mega Man 10
 [4] Mercenary Kings
 [4] Metal Gear Solid V: Ground Zeroes
 [4] Metal Gear Solid V: The Phantom Pain
@@ -383,8 +370,8 @@ Mega Man 9 & 10 Combo Pack
 [3] Remember Me
 [4] Resident Evil
 Resident Evil: Chronicles HD Collection
-	[3] Resident Evil: The Umbrella Chronicles
-	[3] Resident Evil: The Darkside Chronicles
+ [3] Resident Evil: The Umbrella Chronicles
+ [3] Resident Evil: The Darkside Chronicles
 [3] Retro/Grade
 [4] RIGS: Mechanized Combat League
 [4] Road Not Taken
@@ -501,7 +488,7 @@ Array.from(document.getElementsByTagName('pre')).map(function(pre){
 		line = arr[0];
 		var li = document.createElement('li');
 		li.innerHTML = line.trim();
-		if (line[0] == '\t') {
+		if (line[0] == ' ') {
 			var last = ol.lastElementChild;
 			if (!last.getElementsByTagName('ul').length) last.append(document.createElement('ul'));
 			last.getElementsByTagName('ul')[0].append(li);
