--- a/games.html
+++ b/games.html
@@ -5,10 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>alexhong.ml/games</title>
-<script src="../smartquotes.js"></script>
+<script src="js/smartquotes.js"></script>
 <script>smartquotes()</script>
 <style>
-* 		{ margin: 0; padding: 0; list-style: none; font-family: inherit; }
+*		{ margin: 0; padding: 0; list-style: none; font-family: inherit; }
 body 	{ padding: 20px 10px 0; font: 13px/20px -apple-system, BlinkMacSystemFont, Roboto, sans-serif; }
 div 	{ padding: 0 10px 20px; box-sizing: border-box; }
 @media only screen and (min-width: 560px) { 
