--- a/pchat/index.html
+++ b/pchat/index.html
@@ -4,10 +4,9 @@
 <head>
 <title>PChat</title>
 <meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
-<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link href="style.css" rel="stylesheet">
 <script>if (location.pathname == '/pchat/index.html') location.replace('.')</script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="script.js"></script>
 </head>
 
