revert path script

--- a/pchat/index.html
+++ b/pchat/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="style.css" rel="stylesheet">
-<script>if (location.pathname != '/pchat/') location.replace('.')</script>
+<script>if (location.pathname == '/pchat/index.html') location.replace('.')</script>
 <script src="script.js"></script>
 </head>
 
