--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1">
 <title>Alex Hong</title>
+<script>if (location.host && location.pathname != '/') location.replace('.')</script>
 <style>
 
 * { 
