--- a/games.owned.html
+++ b/games.owned.html
@@ -157,6 +157,7 @@ Uncharted: The Nathan Drake Collection $8
 [V] BlazBlue: Continuum Shift Extend
 [3] BlazeRush
 [3] Blood Knights
+[4V] Bombing Busters
 [3] The Book of Unwritten Tales 2
 [4] Bound
 [4] Broforce
@@ -169,6 +170,7 @@ Uncharted: The Nathan Drake Collection $8
 [3V] CastleStorm
 [3] The Cave
 [3] Chariot
+[4V] Claire: Extended Cut
 [3] Closure
 [3] Cloudberry Kingdom
 [V] Code: Realize ~Guardian of Rebirth~
@@ -215,6 +217,7 @@ Uncharted: The Nathan Drake Collection $8
 [43V] Entwined
 [4V] Escape Plan
 [4] Ether One
+[V] Exile's End
 [3] Fat Princess
 [43V] Fez
 [V] Final Horizon
@@ -233,6 +236,7 @@ Uncharted: The Nathan Drake Collection $8
 [4] Goat Simulator
 [3] God of War: Ascension
 [4] Gone Home
+[4V] Grand Kingdom
 [V] Gravity Rush
 [3] Grid 2
 [3] Grid Autosport
@@ -270,6 +274,7 @@ Hitman HD Trilogy
 [4] Killing Floor 2
 [3] Kingdoms of Amalur: Reckoning
 [4] King's Quest: A Knight to Remember
+[4] Knack
 [3V] Knytt Underground
 [4] Kung Fu Panda: Showdown of Legendary Legends
 [3V] Kung Fu Rabbit
@@ -278,6 +283,7 @@ Hitman HD Trilogy
 [4] Lara Croft and the Temple of Osiris
 [4V] Laser Disco Defenders
 [3] The Last Guy
+[3] Legend of Kay
 [V] Lemmings Touch
 [4V] Letter Quest Remastered
 [V] Level 22
@@ -304,10 +310,12 @@ Mega Man 9 & 10 Combo Pack
 [4] Metal Gear Solid V: Ground Zeroes
 [4] Metal Gear Solid V: The Phantom Pain
 [V] Metrico
+[43] Mighty No. 9
 [V] ModNation Racers: Road Trip
 [V] MonsterBag
 [3] Monster Jam Battlegrounds
 [43V] MouseCraft
+[3] Mugen Souls Z
 [V] Muramasa Rebirth
 [V] Murasaki Baby
 [3V] Mutant Mudds Deluxe
@@ -341,6 +349,7 @@ Mega Man 9 & 10 Combo Pack
 [3] Rag Doll Kung Fu: Fists of Plastic
 [3] Rain
 [3V] Rainbow Moon
+[4] Ratchet & Clank
 [3] Ratchet & Clank: All 4 One
 [V] Rayman Origins
 [V] Reality Fighters
@@ -352,6 +361,7 @@ Resident Evil: Chronicles HD Collection
  [3] Resident Evil: The Darkside Chronicles
 [3] Retro/Grade
 [4] RIGS: Mechanized Combat League
+[4] RiME
 [4] Road Not Taken
 [V] Rocketbirds: Hardboiled Chicken
 [4] Rocket League
@@ -376,6 +386,7 @@ Resident Evil: Chronicles HD Collection
 [V] Sonic & All-Stars Racing Transformed
 [V] Soul Sacrifice
 [3] Spec Ops: The Line
+[3] Spelunker HD
 [43] Sportsfriends
 [4V] Spy Chameleon
 [3] SSX
