--- a/games.owned.html
+++ b/games.owned.html
@@ -134,6 +134,7 @@ Uncharted: The Nathan Drake Collection $8
 
 <div id="plus"><header><b>PS+</b></header><pre>
 [4V] 10 Second Ninja X
+[43V] 99Vidas
 [43] Aaru's Awakening
 [3] Abyss Odyssey
 [4] Abzû
@@ -263,6 +264,7 @@ Hitman HD Trilogy
 [3] Infamous 2
 [4] Infamous First Light
 [4] Infamous Second Son
+[43] In Space We Brawl
 [4] Invisible, Inc.
 [3] Invizimals: The Lost Kingdom
 [3] Jet Set Radio
@@ -299,6 +301,7 @@ Hitman HD Trilogy
 [3V] Luftrausers
 [4V] Lumo
 [3V] Machinarium
+[4] Mad Max
 [3] Mad Riders
 [4] Magicka 2
 [3] Malicious
@@ -344,6 +347,7 @@ Mega Man 9 & 10 Combo Pack
 [4V] Psycho-Pass: Mandatory Happiness
 [43V] Pumped BMX +
 [3] Puppeteer
+[43B] Q*bert Rebooted
 [3] Quantum Conundrum
 [43V] Race the Sun
 [3] Rag Doll Kung Fu: Fists of Plastic
@@ -423,6 +427,8 @@ Resident Evil: Chronicles HD Collection
 [4V] TorqueL
 [4V] TowerFall Ascension
 [43] Tower of Guns
+[3] Toy Home
+[4] Trackmania Turbo
 [4] Transistor
 [4] Tricky Towers
 [4] Tropico 5
