--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a:hover, a:focus {
 <ul>
 <li><a href="mailto:&#109;ai%6c@&#97;le%78hon&#103;.ml"><b>&#109ail</b>&#8202;&#64;&#8202;&#97;lex&#104;&#111;&#110;&#103;.&#109;&#108;</a></li>
 <li><a href="https://www.facebook.com/alex.hong"><b>facebook</b>.com/alex.hong</a></li>
-<li><a href="https://www.flickr.com/photos/aqhong"><b>flickr</b>.com/aqhong</a></li>
+<!-- <li><a href="https://www.flickr.com/photos/aqhong"><b>flickr</b>.com/aqhong</a></li> -->
 <li><a href="https://www.instagram.com/modest.maoist/"><b>instagram</b>.com/modest.maoist</a></li>
 </ul>
 
