--- a/games.owned.html
+++ b/games.owned.html
@@ -20,6 +20,7 @@
 [3] Batman: Arkham Asylum $5
 [4] Batman: Arkham Knight $9
 [3] Beyond Good & Evil $3
+[4] Beyond: Two Souls
 [4V] Bit.Trip Presents Runner 2: Future Legend of Rhythm Alien $2
 [4] Bloodborne $8
 Borderlands Bundle $21
@@ -214,6 +215,7 @@ Uncharted: The Nathan Drake Collection $8
 [4] Dust: An Elysian Tail
 [3] Dyad
 [3] Earth Defense Force 2025
+[3] Eat Them!
 [V] Element4l
 [43V] Entwined
 [4V] Escape Plan
@@ -227,6 +229,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] From Dust
 [3] Frozen Synapse Prime
 [4] Furi
+[V] Furmins
 [4V] Futuridium EP Deluxe
 [4] Galak-Z: The Dimensional
 [3] Galaga Legions DX
@@ -275,6 +278,7 @@ Hitman HD Trilogy
 [3V] KickBeat
 [4] Killing Floor 2
 [3] Kingdoms of Amalur: Reckoning
+[43V] King Oddball
 [4] King's Quest: A Knight to Remember
 [4] Knack
 [3V] Knytt Underground
@@ -355,6 +359,7 @@ Mega Man 9 & 10 Combo Pack
 [3V] Rainbow Moon
 [4] Ratchet & Clank
 [3] Ratchet & Clank: All 4 One
+[4] Rayman Legends
 [V] Rayman Origins
 [V] Reality Fighters
 [4] Rebel Galaxy
@@ -366,6 +371,7 @@ Resident Evil: Chronicles HD Collection
 [3] Retro/Grade
 [4] RIGS: Mechanized Combat League
 [4] RiME
+[3] Risen 3: Titan Lords
 [4] Road Not Taken
 [V] Rocketbirds: Hardboiled Chicken
 [4] Rocket League
