--- a/games.played.html
+++ b/games.played.html
@@ -12,6 +12,9 @@
 <body id="played">
 
 <div><pre>
+<b>2018</b>
+[iOS] Florence
+[PS4] _RiME_
 <b>2017</b>
 [XB1] _PlayerUnknown's Battlegrounds_
 [PS4] _Fortnite_
