--- a/games.owned.html
+++ b/games.owned.html
@@ -145,6 +145,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Anomaly Warzone Earth
 [4] Apotheon
 [4] Assassin's Creed Freedom Cry
+[V] Atomic Ninjas
 [4V] Azkend 2
 [43V] Badland
 [3] Batman: Arkham City
@@ -399,6 +400,7 @@ Resident Evil: Chronicles HD Collection
 [3] Spelunker HD
 [43] Sportsfriends
 [4V] Spy Chameleon
+[V] Squares
 [3] SSX
 [3V] Stealth Inc: A Clone in the Dark
 [43V] Stealth Inc 2: A Game of Clones
@@ -430,12 +432,14 @@ Resident Evil: Chronicles HD Collection
 [4V] Titan Souls
 [43V] Tiny Troopers: Joint Ops
 [3] Tomb Raider
+[3] Tom Clancy's Ghost Recon: Future Soldier
 [4V] TorqueL
 [4V] TowerFall Ascension
 [43] Tower of Guns
 [3] Toy Home
 [4] Trackmania Turbo
 [4] Transistor
+[4] Trials Fusion
 [4] Tricky Towers
 [4] Tropico 5
 [3] Truck Racer
@@ -465,11 +469,13 @@ Resident Evil: Chronicles HD Collection
 [4] Worms Battlegrounds
 [3] WRC 5
 [3] Xblaze Lost: Memories
+[4] XCOM 2
 [4V] Xeodrifter
 [3] Yakuza 4
 [3] Yakuza 5
 [V] Zero Escape: Virtue's Last Reward
 [4] Zombi
+[3] Zombie Driver HD
 [3V] Zombie Tycoon 2: Brainhov's Revenge
 </pre></div>
 
