--- a/games.owned.html
+++ b/games.owned.html
@@ -167,6 +167,7 @@ Uncharted: The Nathan Drake Collection $8
 [4V] Broken Age
 [V] Broken Sword 5: The Serpent's Curse
 [3] Brothers: A Tale of Two Sons
+[4] Call of Duty: Black Ops III
 [3] Call of Juarez: Bound in Blood
 [3] Call of Juarez: Gunslinger
 [3] Castle of Illusion Starring Mickey Mouse
