--- a/games.owned.html
+++ b/games.owned.html
@@ -129,13 +129,14 @@ Uncharted: The Nathan Drake Collection $8
 [4] The Walking Dead: Michonne $5
 [4] What Remains of Edith Finch $11
 [3] The Wolf Among Us $9
-[V] Zero Time Dilemma $12
+[V] Zero Escape: Zero Time Dilemma $12
 </pre></div>
 
 <div id="plus"><header><b>PS+</b></header><pre>
 [4V] 10 Second Ninja X
 [43V] 99Vidas
 [43] Aaru's Awakening
+[4] Absolver
 [3] Abyss Odyssey
 [4] Abzû
 [3] Alien Rage
@@ -223,6 +224,7 @@ Uncharted: The Nathan Drake Collection $8
 [4V] Escape Plan
 [4] Ether One
 [V] Exile's End
+[43] Extreme Exorcism
 [3] Fat Princess
 [43V] Fez
 [V] Final Horizon
@@ -250,6 +252,7 @@ Uncharted: The Nathan Drake Collection $8
 [4] Guacamelee!
 [3] Handball 2016
 [4] Hardware: Rivals
+[4] Heavy Rain
 [43V] Helldivers
 [V] History Legends of War: Patton
 Hitman HD Trilogy
@@ -361,6 +364,7 @@ Mega Man 9 & 10 Combo Pack
 [3V] Rainbow Moon
 [4] Ratchet & Clank
 [3] Ratchet & Clank: All 4 One
+[3] Rayman 3 HD
 [4] Rayman Legends
 [V] Rayman Origins
 [V] Reality Fighters
@@ -397,6 +401,7 @@ Resident Evil: Chronicles HD Collection
 [3] Snakeball
 [V] Sonic & All-Stars Racing Transformed
 [V] Soul Sacrifice
+[V] Space Overlords
 [3] Spec Ops: The Line
 [3] Spelunker HD
 [43] Sportsfriends
