--- a/games.owned.html
+++ b/games.owned.html
@@ -64,6 +64,7 @@ Borderlands: The Handsome Collection $18
  Season Pass $20
 [4] The Last of Us Remastered $11
 [4] Life Is Strange $10
+[4] Life Is Strange: Before the Storm $13
 Mass Effect Trilogy $15
  [3] Mass Effect
  [3] Mass Effect 2
@@ -111,6 +112,7 @@ Prince of Persia Trilogy $8
 [3V] Stick It to the Man $6
 [4] Street Fighter V #60
  Season Pass #30
+[4] Tacoma $10
 [4] Tales from the Borderlands $4
 [3] Tales of Monkey Island $1
 [3] Terraria $4
