--- a/games.owned.html
+++ b/games.owned.html
@@ -166,6 +166,7 @@ Uncharted: The Nathan Drake Collection $8
 [4V] Bombing Busters
 [3] The Book of Unwritten Tales 2
 [4] Bound
+[3] Bound by Flame
 [4] Broforce
 [4V] Broken Age
 [V] Broken Sword 5: The Serpent's Curse
@@ -192,6 +193,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Darkstalkers Resurrection
 [3] Datura
 [4V] Day of the Tentacle Remastered
+[4] Dead by Daylight
 [3] Deadly Premonition
 [4] The Deadly Tower of Monsters
 [4] Dead Nation
@@ -213,6 +215,7 @@ Uncharted: The Nathan Drake Collection $8
 [3V] Dragon's Crown
 [3] Dragon's Dogma: Dark Arisen
 [4] Drawn to Death
+[V] Draw Slasher
 [3] DuckTales: Remastered
 [3] Dungeon Defenders
 [3] Dungeons & Dragons: Chronicles of Mystara
@@ -314,6 +317,7 @@ Hitman HD Trilogy
 [3V] Machinarium
 [4] Mad Max
 [3] Mad Riders
+[4] Mafia III
 [4] Magicka 2
 [3] Malicious
 [3] Medal of Honor: Warfighter
@@ -390,6 +394,7 @@ Resident Evil: Chronicles HD Collection
 [3] Saints Row: The Third
 [3] Savage Moon
 [4] Secret Ponchos
+[3] Serious Sam 3 BFE
 [V] Severed
 [3] Sherlock Holmes: Crimes & Punishments
 [4V] Shutshimi
@@ -403,6 +408,7 @@ Resident Evil: Chronicles HD Collection
 [3] Snakeball
 [V] Sonic & All-Stars Racing Transformed
 [V] Soul Sacrifice
+[V] Space Hulk
 [V] Space Overlords
 [3] Spec Ops: The Line
 [3] Spelunker HD
