--- a/games.owned.html
+++ b/games.owned.html
@@ -199,6 +199,7 @@ Uncharted: The Nathan Drake Collection $8
 [4] Dead Nation
 [3] Dead Space 3
 [3] Demon's Souls
+[4] Destiny 2
 [3] Deus Ex: Human Revolution
 [4] Deus Ex: Mankind Divided
 [3] Dirt 3
@@ -235,6 +236,7 @@ Uncharted: The Nathan Drake Collection $8
 [V] Final Horizon
 [V] Flame Over
 [4V] Forma.8
+[4V] Foul Play
 [3] From Dust
 [3] Frozen Synapse Prime
 [4] Furi
@@ -248,6 +250,7 @@ Uncharted: The Nathan Drake Collection $8
 [V] Germinator
 [4] Goat Simulator
 [3] God of War: Ascension
+[4] God of War III Remastered
 [4] Gone Home
 [4V] Grand Kingdom
 [V] Gravity Rush
@@ -364,6 +367,7 @@ Mega Man 9 & 10 Combo Pack
 [3] Puppeteer
 [43B] Q*bert Rebooted
 [3] Quantum Conundrum
+[43] Q.U.B.E.
 [43V] Race the Sun
 [3] Rag Doll Kung Fu: Fists of Plastic
 [3] Rain
@@ -410,6 +414,7 @@ Resident Evil: Chronicles HD Collection
 [V] Soul Sacrifice
 [V] Space Hulk
 [V] Space Overlords
+[43V] Sparkle 2
 [3] Spec Ops: The Line
 [3] Spelunker HD
 [43] Sportsfriends
