--- a/games.owned.html
+++ b/games.owned.html
@@ -12,7 +12,7 @@
 <body id="owned">
 
 <div id="psn"><header><b>PSN</b></header><pre>
-[4] 2064: Read Only Memories $8
+[4V] 2064: Read Only Memories $8
 [V] Actual Sunlight $2
 [4V] Alone With You $4
 [43V] Another World $7
@@ -167,6 +167,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] The Book of Unwritten Tales 2
 [4] Bound
 [3] Bound by Flame
+[43V] The Bridge
 [4] Broforce
 [4V] Broken Age
 [V] Broken Sword 5: The Serpent's Curse
@@ -237,6 +238,7 @@ Uncharted: The Nathan Drake Collection $8
 [V] Flame Over
 [4V] Forma.8
 [4V] Foul Play
+[4] Friday the 13th: The Game
 [3] From Dust
 [3] Frozen Synapse Prime
 [4] Furi
@@ -301,6 +303,7 @@ Hitman HD Trilogy
 [V] La-Mulana EX
 [4] Lara Croft and the Temple of Osiris
 [4V] Laser Disco Defenders
+[4] Laser League
 [3] The Last Guy
 [3] Legend of Kay
 [V] Lemmings Touch
@@ -323,6 +326,7 @@ Hitman HD Trilogy
 [4] Mafia III
 [4] Magicka 2
 [3] Malicious
+[3] Master Reboot
 [3] Medal of Honor: Warfighter
 Mega Man 9 & 10 Combo Pack
  [3] Mega Man 9
@@ -390,6 +394,7 @@ Resident Evil: Chronicles HD Collection
 [3] Risen 3: Titan Lords
 [4] Road Not Taken
 [V] Rocketbirds: Hardboiled Chicken
+[4V] Rocketbirds 2: Evolution
 [4] Rocket League
 [43V] Rogue Legacy
 [3] R-Type Dimensions
