--- a/games.owned.html
+++ b/games.owned.html
@@ -147,6 +147,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Anna
 [3] Anomaly Warzone Earth
 [4] Apotheon
+[3] Arkedo Series
 [4] Assassin's Creed Freedom Cry
 [V] Atomic Ninjas
 [4V] Azkend 2
@@ -172,6 +173,8 @@ Uncharted: The Nathan Drake Collection $8
 [4V] Broken Age
 [V] Broken Sword 5: The Serpent's Curse
 [3] Brothers: A Tale of Two Sons
+[4] Bulletstorm
+[4V] Burly Men at Sea
 [4] Call of Duty: Black Ops III
 [3] Call of Juarez: Bound in Blood
 [3] Call of Juarez: Gunslinger
@@ -397,6 +400,7 @@ Resident Evil: Chronicles HD Collection
 [4V] Rocketbirds 2: Evolution
 [4] Rocket League
 [43V] Rogue Legacy
+[4V] Roundabout
 [3] R-Type Dimensions
 [3] Sacred 3
 [4] Saints Row: Gat out of Hell
@@ -497,6 +501,7 @@ Resident Evil: Chronicles HD Collection
 [4V] Xeodrifter
 [3] Yakuza 4
 [3] Yakuza 5
+[4] Yakuza Kiwami
 [V] Zero Escape: Virtue's Last Reward
 [4] Zombi
 [3] Zombie Driver HD
