--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@ a:hover, a:focus {
 <body>
 
 <ul>
-<li><a href="mailto:&#109;ai%6c@&#97;le%78hon&#103;.ml"><b>&#109ail</b>&#8202;&#64;&#8202;&#97;lex&#104;&#111;&#110;&#103;.&#109;&#108;</a></li>
-<li><a href="https://www.facebook.com/alex.hong"><b>facebook</b>.com/alex.hong</a></li>
-<!-- <li><a href="https://www.flickr.com/photos/aqhong"><b>flickr</b>.com/aqhong</a></li> -->
-<li><a href="https://www.instagram.com/modestmaoist/"><b>instagram</b>.com/modestmaoist</a></li>
+<a href="mail&#116;o&#58;%6&#49;lexh&#37;&#54;Fn%&#54;7&#64;%&#54;&#67;i%73&#116;&#46;ru">&#97;le&#120;hong&#8202;&#64;&#8202;&#108;ist&#46;ru</a>
+<li><a href="https://www.facebook.com/alex.hong">facebook.com/alex.hong</a></li>
+<li><a href="https://www.instagram.com/modestmaoist/">instagram.com/modestmaoist</a></li>
 </ul>
 
 </body>
