--- a/games.owned.html
+++ b/games.owned.html
@@ -282,6 +282,7 @@ Hitman HD Trilogy
 [3] I Am Alive
 [3] Ibb & Obb
 [3] Ico
+[4V] Iconoclasts
 [3] Infamous 2
 [4] Infamous First Light
 [4] Infamous Second Son
@@ -359,8 +360,10 @@ Mega Man 9 & 10 Combo Pack
 [4] Oddworld: New ’n’ Tasty!
 [V] Oddworld: Stranger's Wrath
 [4V] OlliOlli2: Welcome to Olliwood
+[4] Onrush
 [V] Oreshika: Tainted Bloodlines
 [4] Outlast
+[V] Papers, Please
 [3] Payday 2
 [3] Persona 4 Arena Ultimax
 [V] PixelJunk Monsters
@@ -419,6 +422,7 @@ Resident Evil: Chronicles HD Collection
 [3] Sleeping Dogs
 [V] Smart As...
 [3] Snakeball
+[4] Soma
 [V] Sonic & All-Stars Racing Transformed
 [V] Soul Sacrifice
 [V] Space Hulk
@@ -432,6 +436,8 @@ Resident Evil: Chronicles HD Collection
 [3] SSX
 [3V] Stealth Inc: A Clone in the Dark
 [43V] Stealth Inc 2: A Game of Clones
+[3] Steins;Gate
+[3] Steredenn
 [4] Stick It to the Man
 [4V] SteamWorld Dig
 [4] Stories: The Path of Destinies
