--- a/games.owned.html
+++ b/games.owned.html
@@ -144,6 +144,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Alien Rage
 [4] Amnesia Collection
 [V] Amnesia: Memories
+[3] Amplitude
 [3] Anna
 [3] Anomaly Warzone Earth
 [4] Apotheon
@@ -235,6 +236,7 @@ Uncharted: The Nathan Drake Collection $8
 [4] Ether One
 [V] Exile's End
 [43] Extreme Exorcism
+[4V] Fallen Legion: Flames of Rebellion
 [3] Fat Princess
 [43V] Fez
 [V] Final Horizon
@@ -370,6 +372,7 @@ Mega Man 9 & 10 Combo Pack
 [4V] Pix the Cat
 [3V] PlayStation All-Stars Battle Royale
 [3] Poker Night 2
+[4] Portal Knights
 [3] Port Royale 3: Pirates and Merchants
 [3V] Proteus
 [4V] Psycho-Pass: Mandatory Happiness
@@ -436,6 +439,7 @@ Resident Evil: Chronicles HD Collection
 [3] SSX
 [3V] Stealth Inc: A Clone in the Dark
 [43V] Stealth Inc 2: A Game of Clones
+[4] Steep
 [3] Steins;Gate
 [3] Steredenn
 [4] Stick It to the Man
@@ -448,6 +452,7 @@ Resident Evil: Chronicles HD Collection
 [4V] Super Exploding Zoo
 [4V] Super Meat Boy
 [3] Super Motherload
+[V] Super Mutant Alien Assault
 [3] Super Stardust HD
 [3] Super Street Fighter IV: Arcade Edition
 [4V] Super Time Force Ultra
@@ -512,6 +517,7 @@ Resident Evil: Chronicles HD Collection
 [4] Zombi
 [3] Zombie Driver HD
 [3V] Zombie Tycoon 2: Brainhov's Revenge
+[3] Zone of the Enders HD Collection
 </pre></div>
 
 <script>
