--- a/games.owned.html
+++ b/games.owned.html
@@ -210,6 +210,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Dirt 3
 [4] Disc Jam
 [3] Dishonored
+[3V] Divekick
 [3] DmC: Devil May Cry
 [43V] Doki-Doki Universe
 [V] Dokuro
@@ -241,6 +242,7 @@ Uncharted: The Nathan Drake Collection $8
 [43V] Fez
 [V] Final Horizon
 [V] Flame Over
+[4] For Honor
 [4V] Forma.8
 [4V] Foul Play
 [4] Friday the 13th: The Game
@@ -265,6 +267,7 @@ Uncharted: The Nathan Drake Collection $8
 [3] Grid Autosport
 [4] Grow Home
 [4] Guacamelee!
+[4V] Gunhouse
 [3] Handball 2016
 [4] Hardware: Rivals
 [4] Heavy Rain
@@ -275,6 +278,7 @@ Hitman HD Trilogy
  [3] Hitman: Contracts
  [3] Hitman: Blood Money
 [3] Hitman: Absolution
+[4] Hitman: The Complete First Season
 [3] Hoard
 [43V] Hohokum
 [4V] Hue
@@ -338,6 +342,7 @@ Mega Man 9 & 10 Combo Pack
  [3] Mega Man 9
  [3] Mega Man 10
 [4] Mercenary Kings
+[3] Metal Gear Solid 4: Guns of the Patriots
 [4] Metal Gear Solid V: Ground Zeroes
 [4] Metal Gear Solid V: The Phantom Pain
 [V] Metrico
@@ -405,6 +410,7 @@ Resident Evil: Chronicles HD Collection
 [V] Rocketbirds: Hardboiled Chicken
 [4V] Rocketbirds 2: Evolution
 [4] Rocket League
+[4V] Rogue Aces
 [43V] Rogue Legacy
 [4V] Roundabout
 [3] R-Type Dimensions
