--- a/games.owned.html
+++ b/games.owned.html
@@ -177,6 +177,7 @@ Uncharted: The Nathan Drake Collection $8
 [4] Bulletstorm
 [4V] Burly Men at Sea
 [4] Call of Duty: Black Ops III
+[4] Call of Duty: Modern Warfare Remastered
 [3] Call of Juarez: Bound in Blood
 [3] Call of Juarez: Gunslinger
 [3] Castle of Illusion Starring Mickey Mouse
@@ -510,6 +511,7 @@ Resident Evil: Chronicles HD Collection
 [V] Wanted Corp.
 [4V] We Are Doomed
 [V] Wipeout 2048
+[4] The Witness
 [4V] Woah Dave!
 [4] Worms Battlegrounds
 [3] WRC 5
